# qcdloop

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  Makefile.am  Makefile.in  README  README.md  configure  configure.ac
.github/workflows/: main.yml
.github/workflows/centos8/: Dockerfile  action.yaml  entrypoint.sh
.github/workflows/fedora35/: Dockerfile  action.yaml  entrypoint.sh
doc/: Doxyfile  bibliography.bib
examples/: Makefile.am  Makefile.in  cache_test.cc  cmass_test.cc  fortran_test.f  trigger_test.cc
m4/: ax_check_compile_flag.m4  ax_cxx_compile_stdcxx_11.m4
pywrap/: README  README.md  qcdloop.cpp  qcdloop.pyx  qcdloop_cxx.pxd  setup.py
pywrap/test/: example.py
src/: Makefile.am  Makefile.in  box.cc  bubble.cc  cache.cc  qcdloop-config.in  qcdloop.cc  qcdloop.pc.in  tadpole.cc  tools.cc  topology.cc  triangle.cc  types.cc  wrapper.cc
src/qcdloop/: box.h  bubble.h  cache.h  config.h.in  exceptions.h  maths.h  qcdloop.h  tadpole.h  timer.h  tools.h  topology.h  triangle.h  types.h  wrapper.h
